Only build if necessary (#158)
* Fix for the workflow to only build the image if necessary

* Remove newline within the workflow

* Prepare image by tagging the existing one, build only if necessary

* Fix for the wrong registry

* Fix the command to check the latest tag

* Use the latest tag of the pre-built image

* Replace prepare_image with build
Use the same build function between the manual build and for the
interactive shell

* Set and export GH_TOKEN
Always prepare the image locally also for the simulation

* Fix for the prepare_docker_image

* Track the latest pre-built image in a file
and prepare/clean the images within prepare_simulation/finish_simulation

* Uncomment push commands in the workflow

* Remove curl installation

* Fix for missing experiment_dir and remove python3
Added +x to docker_cleaner.py

* Update the latest tag as a new PR got merged before this patch

--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -19,19 +19,82 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
 
+      - name: Set current GIT_HASH
+        id: current_hash
+        run: echo "githash=$(git rev-parse --short HEAD)" >> $GITHUB_OUTPUT
+
+      - name: Read last built tag from last_built_tag.txt
+        id: last_tag
+        run: |
+          if [[ -f last_built_tag.txt ]]; then
+            TAG=$(cat last_built_tag.txt)
+            echo "Found last built tag: $TAG"
+            echo "tag=$TAG" >> $GITHUB_OUTPUT
+          else
+            echo "No last_built_tag.txt found, assuming first build."
+            echo "tag=" >> $GITHUB_OUTPUT
+          fi
+
+      - name: Check if relevant directories changed since last build
+        id: changes
+        env:
+          LAST_TAG: ${{ steps.last_tag.outputs.tag }}
+        run: |
+          if [[ -z "$LAST_TAG" ]]; then
+            echo "No previous tag — assuming first build."
+            echo "changed=true" >> $GITHUB_OUTPUT
+          else
+            git fetch origin main --depth=50
+            CHANGED=$(git diff --name-only "$LAST_TAG" HEAD | grep -E '^(common/|workloads/allbench_traces/)' || true)
+            if [[ -n "$CHANGED" ]]; then
+              echo "Relevant changes detected:"
+              echo "$CHANGED"
+              echo "changed=true" >> $GITHUB_OUTPUT
+            else
+              echo "No relevant changes detected."
+              echo "changed=false" >> $GITHUB_OUTPUT
+            fi
+          fi
+
       - name: Log in to GitHub Container Registry
+        if: steps.changes.outputs.changed == 'true'
         uses: docker/login-action@v2
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Set GitHash
-        id: githash
-        run: echo "::set-output name=GIT_HASH::$(git rev-parse --short HEAD)"
+      - name: Build Docker image
+        if: steps.changes.outputs.changed == 'true'
+        run: docker build . \
+          --file ./workloads/allbench_traces/Dockerfile \
+          --no-cache \
+          --tag ghcr.io/litz-lab/scarab-infra/allbench_traces:${{ steps.current_hash.outputs.githash }}
 
-      - name: Build Docker images
-        run: docker build . --file ./workloads/allbench_traces/Dockerfile --no-cache --tag ghcr.io/litz-lab/scarab-infra/allbench_traces:${{ steps.githash.outputs.GIT_HASH }}
+      - name: Push Docker image to GitHub Packages
+        if: steps.changes.outputs.changed == 'true'
+        run: docker push ghcr.io/litz-lab/scarab-infra/allbench_traces:${{ steps.current_hash.outputs.githash }}
 
-      - name: Push Docker images to GitHub Packages
-        run: docker push ghcr.io/litz-lab/scarab-infra/allbench_traces:${{ steps.githash.outputs.GIT_HASH }}
+      - name: Save short GIT_HASH to last_built_tag.txt
+        if: steps.changes.outputs.changed == 'true'
+        run: |
+          SHORT_HASH=$(git rev-parse --short HEAD)
+          echo "Saving GIT_HASH: $SHORT_HASH"
+          echo "$SHORT_HASH" > last_built_tag.txt
+
+      - name: Commit and push updated last_built_tag.txt
+        if: steps.changes.outputs.changed == 'true'
+        run: |
+          git config user.name "github-actions"
+          git config user.email "github-actions@github.com"
+
+          if git diff --quiet last_built_tag.txt; then
+            echo "No change in last_built_tag.txt"
+          else
+            echo "Change in last_built_tag.txt"
+            git add last_built_tag.txt
+            git commit -m "Update last built Docker image tag"
+            git push
+          fi
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
