--- a/workloads/autoware/lane_change/input_bag/metadata.yaml
+++ b/workloads/autoware/lane_change/input_bag/metadata.yaml
@@ -2,25 +2,25 @@ rosbag2_bagfile_information:
   version: 5
   storage_identifier: sqlite3
   duration:
-    nanoseconds: 20939047970
+    nanoseconds: 13600175303
   starting_time:
-    nanoseconds_since_epoch: 1745623287635547598
-  message_count: 213
+    nanoseconds_since_epoch: 1748489922748530824
+  message_count: 137
   topics_with_message_count:
     - topic_metadata:
-        name: /filtered/objects
+        name: /perception/object_recognition/objects
         type: autoware_perception_msgs/msg/PredictedObjects
         serialization_format: cdr
-        offered_qos_profiles: "- history: 1\n  depth: 10\n  reliability: 1\n  durability: 2\n  deadline:\n    sec: 9223372036\n    nsec: 854775807\n  lifespan:\n    sec: 9223372036\n    nsec: 854775807\n  liveliness: 1\n  liveliness_lease_duration:\n    sec: 9223372036\n    nsec: 854775807\n  avoid_ros_namespace_conventions: false"
-      message_count: 213
+        offered_qos_profiles: "- history: 1\n  depth: 1\n  reliability: 1\n  durability: 2\n  deadline:\n    sec: 9223372036\n    nsec: 854775807\n  lifespan:\n    sec: 9223372036\n    nsec: 854775807\n  liveliness: 1\n  liveliness_lease_duration:\n    sec: 9223372036\n    nsec: 854775807\n  avoid_ros_namespace_conventions: false"
+      message_count: 137
   compression_format: ""
   compression_mode: ""
   relative_file_paths:
-    - input_bag_0.db3
+    - lane_change_bag_0.db3
   files:
-    - path: input_bag_0.db3
+    - path: lane_change_bag_0.db3
       starting_time:
-        nanoseconds_since_epoch: 1745623287635547598
+        nanoseconds_since_epoch: 1748489922748530824
       duration:
-        nanoseconds: 20939047970
-      message_count: 213
+        nanoseconds: 13600175303
+      message_count: 137
