--- a/workloads/autoware/path_optimizer/package.xml
+++ b/workloads/autoware/path_optimizer/package.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 <?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="3">
-  <name>mpc_controller_test</name>
+  <name>path_optimizer</name>
   <version>0.0.0</version>
   <description>TODO: Package description</description>
   <maintainer email="mkim293@ucsc.edu">root</maintainer>
@@ -10,11 +10,11 @@
   <buildtool_depend>ament_cmake</buildtool_depend>
 
   <depend>rclcpp</depend>
-  <depend>autoware_control_msgs</depend>
-  <depend>autoware_planning_msgs</depend>
-  <depend>autoware_vehicle_msgs</depend>
-  <depend>nav_msgs</depend>
-  <depend>autoware_mpc_lateral_controller</depend>
+  <depend>autoware_test_utils</depend>
+  <depend>autoware_planning_test_manager</depend>
+  <depend>tier4_planning_msgs</depend>
+  <depend>autoware_motion_utils</depend>
+  <depend>autoware_path_optimizer</depend>
   <depend>rosbag2_interfaces</depend>
 
   <test_depend>ament_lint_auto</test_depend>
