Autoware 9 workloads binary command (#160)
* autoware behavior planning, lane_change workload

* mpc_controller binary command

* update mpc_controller workload db

* 1. Adjusting the number of timesteps 100 from 600.
2. extending dynamorio timout.
- lane_detector tracing, Runtime: 0:0:55 (hh:mm:ss)
- mpc_controller tracing, Runtime: 0:0:32 (hh:mm:ss)

* Add trace type for new workloads

* reorganizing autoware workload binary commands

* remove previous trace history

* euclidean_cluster workload

* euclidean_cluster docker setup

* euclidean_cluster binary command update

* euclidean_cluster workloads_db update

* crosswalk_velocity workload

* crosswoalk velocity docker file

* crosswalk_velocity workload

* updating crosswalk_velocity workloads.db

* update crosswalk binary command

* update the crosswalk_velocity binary command and map

* update lane_change binary command

* update workloads_db

* workload update, mpc_controller & path_optimizer

* path_optmizer & mpc_controller workloads

* autoware 9 workloads binary command & modifying minor build errors in tracing logic

* add more packages to docker file

* revert a change which was resolved by #162 already

--- a/workloads/autoware/crosswalk_velocity/package.xml
+++ b/workloads/autoware/crosswalk_velocity/package.xml
@@ -1,21 +1,24 @@
 <?xml version="1.0"?>
 <?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="3">
-  <name>my_yabloc_pose_call_pkg</name>
+  <name>crosswalk_velocity</name>
   <version>0.0.0</version>
   <description>TODO: Package description</description>
-  <maintainer email="root@todo.todo">root</maintainer>
+  <maintainer email="mkim293@ucsc.edu">root</maintainer>
   <license>TODO: License declaration</license>
 
   <buildtool_depend>ament_cmake</buildtool_depend>
 
   <depend>rclcpp</depend>
-  <depend>tier4_localization_msgs</depend>
-  <depend>sensor_msgs</depend>
-  <depend>rosbag2_interfaces</depend>
-  <depend>cv_bridge</depend>
-  <depend>yabloc_pose_initializer</depend>
-  <depend>OpenCV</depend>
+  <depend>rosbag2_cpp</depend>
+  <depend>lanelet2_core</depend>
+  <depend>lanelet2_io</depend>
+  <depend>lanelet2_projection</depend>
+  <depend>autoware_lanelet2_extension</depend>
+  <depend>nav_msgs</depend>
+  <depend>tier4_planning_msgs</depend>
+  <depend>autoware_behavior_velocity_crosswalk_module</depend>
+  <depend>rosbag2_transport</depend>
 
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
