--- a/workloads/autoware/Dockerfile
+++ b/workloads/autoware/Dockerfile
@@ -45,7 +45,7 @@ RUN mv autoware.repos $tmpdir/autoware/
 RUN mv simulator.repos $tmpdir/autoware/
 RUN rm -rf /tmp/autoware_repos
 
-# Copy simulator_append.txt to ros2 custom packates(play_next, image republisher)
+# Copy simulator_append.txt to ros2 custom packates(play_next)
 COPY ./workloads/autoware/simulator_append.txt $tmpdir/autoware/
 
 WORKDIR $tmpdir/autoware
@@ -72,8 +72,20 @@ COPY ./workloads/autoware/my_yabloc_pose_call_pkg $tmpdir/autoware/my_yabloc_pos
 RUN cd $tmpdir/autoware/my_yabloc_pose_call_pkg && source /opt/ros/$ROS_DISTRO/setup.bash && source $tmpdir/autoware/install/setup.bash && colcon build --packages-select my_yabloc_pose_call_pkg
 COPY ./workloads/autoware/lane_detector $tmpdir/autoware/lane_detector
 RUN cd $tmpdir/autoware/lane_detector && source /opt/ros/$ROS_DISTRO/setup.bash && source $tmpdir/autoware/install/setup.bash && colcon build --packages-select lane_detector
-COPY ./workloads/autoware/image_republisher $tmpdir/autoware/image_republisher
-RUN cd $tmpdir/autoware/image_republisher && source /opt/ros/$ROS_DISTRO/setup.bash && colcon build --packages-select image_republisher
+COPY ./workloads/autoware/lane_change $tmpdir/autoware/lane_change
+RUN cd $tmpdir/autoware/lane_change && source /opt/ros/$ROS_DISTRO/setup.bash && source $tmpdir/autoware/install/setup.bash && colcon build --packages-select lane_change
+COPY ./workloads/autoware/mpc_controller_test $tmpdir/autoware/mpc_controller_test
+RUN cd $tmpdir/autoware/mpc_controller_test && source /opt/ros/$ROS_DISTRO/setup.bash && source $tmpdir/autoware/install/setup.bash && colcon build --packages-select mpc_controller_test
+COPY ./workloads/autoware/euclidean_cluster $tmpdir/autoware/euclidean_cluster
+RUN cd $tmpdir/autoware/euclidean_cluster && source /opt/ros/$ROS_DISTRO/setup.bash && source $tmpdir/autoware/install/setup.bash && colcon build --packages-select euclidean_cluster
+COPY ./workloads/autoware/crosswalk_velocity $tmpdir/autoware/crosswalk_velocity
+RUN cd $tmpdir/autoware/crosswalk_velocity && source /opt/ros/$ROS_DISTRO/setup.bash && source $tmpdir/autoware/install/setup.bash && colcon build --packages-select crosswalk_velocity
+COPY ./workloads/autoware/pid_longitudinal_controller_test $tmpdir/autoware/pid_longitudinal_controller_test
+RUN cd $tmpdir/autoware/pid_longitudinal_controller_test && source /opt/ros/$ROS_DISTRO/setup.bash && source $tmpdir/autoware/install/setup.bash && colcon build --packages-select pid_longitudinal_controller_test
+COPY ./workloads/autoware/path_optimizer $tmpdir/autoware/path_optimizer
+RUN cd $tmpdir/autoware/path_optimizer && source /opt/ros/$ROS_DISTRO/setup.bash && source $tmpdir/autoware/install/setup.bash && colcon build --packages-select path_optimizer
+COPY ./workloads/autoware/control_validator_full_test $tmpdir/autoware/control_validator_full_test
+RUN cd $tmpdir/autoware/control_validator_full_test && source /opt/ros/$ROS_DISTRO/setup.bash && source $tmpdir/autoware/install/setup.bash && colcon build --packages-select control_validator_full_test
 
 # Install driving_log_replayer via pipx
 RUN apt-get remove -y python3-termcolor || true
