--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -66,7 +66,8 @@ jobs:
 
       - name: Build Docker image
         if: steps.changes.outputs.changed == 'true'
-        run: docker build . \
+        run: |
+          docker build . \
           --file ./workloads/allbench_traces/Dockerfile \
           --no-cache \
           --tag ghcr.io/litz-lab/scarab-infra/allbench_traces:${{ steps.current_hash.outputs.githash }}
