--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -83,19 +83,29 @@ jobs:
           echo "Saving GIT_HASH: $SHORT_HASH"
           echo "$SHORT_HASH" > last_built_tag.txt
 
-      - name: Commit and push updated last_built_tag.txt
+      - name: Create Pull Request to update tag
         if: steps.changes.outputs.changed == 'true'
+        uses: cli/gh-action@v2
+
+      - name: Commit and push new branch, create PR
+        if: steps.changes.outputs.changed == 'true'
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           git config user.name "github-actions"
           git config user.email "github-actions@github.com"
 
-          if git diff --quiet last_built_tag.txt; then
-            echo "No change in last_built_tag.txt"
-          else
-            echo "Change in last_built_tag.txt"
-            git add last_built_tag.txt
-            git commit -m "Update last built Docker image tag"
-            git push
-          fi
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          BRANCH_NAME=auto/update-tag-${{ steps.current_hash.outputs.githash }}
+
+          git checkout -b $BRANCH_NAME
+          git add last_built_tag.txt
+          git commit -m "Auto update Docker image tag to $BRANCH_NAME"
+          git push origin $BRANCH_NAME
+
+          gh pr create \
+            --title "Update Docker tag to $BRANCH_NAME" \
+            --body "Automated update to \`last_built_tag.txt\` after pushing Docker image." \
+            --base main \
+            --head $BRANCH_NAME
+
+          gh pr merge --squash --admin
