--- a/.github/workflows/test-heredoc.yml
+++ b/.github/workflows/test-heredoc.yml
@@ -1,45 +1,46 @@
-name: Heredoc Debug Test
+name: Heredoc PR Test
 
 on:
-  workflow_dispatch:  # Manual trigger
+  workflow_dispatch:
 
 permissions:
   contents: write
   pull-requests: write
 
 jobs:
-  test:
+  heredoc-test:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v3
 
-      - name: Test PR creation via heredoc
+      - name: Create PR using heredoc
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           GITHUB_REPO: ${{ github.repository }}
         run: |
-          set -e
+          git config user.name "github-actions"
+          git config user.email "github-actions@github.com"
 
-          # Create a fake branch to test PR
-          git checkout -b test-heredoc-branch
-          echo "Test" >> test.txt
+          BRANCH_NAME=test-heredoc-branch-$(date +%s)
+          git checkout -b $BRANCH_NAME
+          echo "Test" > test.txt
           git add test.txt
-          git commit -m "Test commit"
-          git push origin test-heredoc-branch
+          git commit -m "Test commit from heredoc test"
+          git push origin $BRANCH_NAME
 
-          # Create a PR using heredoc
           PR_RESPONSE=$(curl -s -X POST -H "Authorization: Bearer $GH_TOKEN" \
             -H "Accept: application/vnd.github+json" \
             https://api.github.com/repos/$GITHUB_REPO/pulls \
             -d @- <<EOF
 {
   "title": "Heredoc PR Test",
-  "head": "test-heredoc-branch",
+  "head": "$BRANCH_NAME",
   "base": "main",
-  "body": "This is a test PR using heredoc and GITHUB_TOKEN"
+  "body": "This is a test PR using heredoc and GITHUB_TOKEN."
 }
 EOF
           )
 
+          echo "Response:"
           echo "$PR_RESPONSE" | jq .
