--- a/.github/workflows/test-heredoc.yml
+++ b/.github/workflows/test-heredoc.yml
@@ -14,33 +14,35 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
 
-      - name: Create PR using heredoc
+      - name: Create PR using heredoc (safe form)
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           GITHUB_REPO: ${{ github.repository }}
         run: |
+          set -e
+
           git config user.name "github-actions"
           git config user.email "github-actions@github.com"
 
           BRANCH_NAME=test-heredoc-branch-$(date +%s)
           git checkout -b $BRANCH_NAME
-          echo "Test" > test.txt
+          echo "hello" > test.txt
           git add test.txt
-          git commit -m "Test commit from heredoc test"
+          git commit -m "Test commit"
           git push origin $BRANCH_NAME
 
-          PR_RESPONSE=$(curl -s -X POST -H "Authorization: Bearer $GH_TOKEN" \
+          PR_RESPONSE=$(cat <<EOF | curl -s -X POST \
+            -H "Authorization: Bearer $GH_TOKEN" \
             -H "Accept: application/vnd.github+json" \
             https://api.github.com/repos/$GITHUB_REPO/pulls \
-            -d @- <<EOF
+            -d @-
 {
   "title": "Heredoc PR Test",
   "head": "$BRANCH_NAME",
   "base": "main",
-  "body": "This is a test PR using heredoc and GITHUB_TOKEN."
+  "body": "This is a test PR using heredoc and GITHUB_TOKEN"
 }
 EOF
           )
 
-          echo "Response:"
           echo "$PR_RESPONSE" | jq .
