--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -9,7 +9,7 @@ on:
 permissions:
     contents: write
     packages: write
-    pull-request: write
+    pull-requests: write
 
 jobs:
   build-and-publish:
